--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
 plugins {
-	id 'java'
 	id 'org.springframework.boot' version '3.3.7'
 	id 'io.spring.dependency-management' version '1.1.7'
 }
@@ -7,6 +6,7 @@ plugins {
 subprojects {
 
 	apply plugin: 'java'
+	apply plugin: 'groovy'
 	apply plugin: 'org.springframework.boot'
 	apply plugin: 'io.spring.dependency-management'
 
@@ -23,10 +23,23 @@ subprojects {
 		mavenCentral()
 	}
 
+	ext {
+		set('springCloudVersion', "2023.0.4")
+	}
+
 	dependencies {
 		implementation 'org.springframework.boot:spring-boot-starter-web'
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
-		testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+		// spock
+		testImplementation 'org.spockframework:spock-core:2.4-M4-groovy-4.0'
+		testImplementation 'org.spockframework:spock-spring:2.4-M4-groovy-4.0'
+	}
+
+	dependencyManagement {
+		imports {
+			mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+		}
 	}
 
 	tasks.named('test') {
