--- a/eureka-server/build.gradle
+++ b/eureka-server/build.gradle
@@ -1,1 +1,6 @@
 bootJar.enabled = true
+
+dependencies {
+    implementation project(':common')
+    api 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
+}
