--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -1,1 +1,9 @@
 bootJar.enabled = true
+
+dependencies {
+    implementation project(':common')
+    api 'org.springframework.boot:spring-boot-starter-actuator'
+    api 'org.springframework.cloud:spring-cloud-starter-gateway'
+    api 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    api 'org.springframework.cloud:spring-cloud-starter-openfeign'
+}
