--- a/product/build.gradle
+++ b/product/build.gradle
@@ -1,1 +1,13 @@
 bootJar.enabled = true
+
+dependencies {
+    implementation project(':common')
+    api 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    api 'org.springframework.boot:spring-boot-starter-actuator'
+    api 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    api 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
+    runtimeOnly 'com.mysql:mysql-connector-j'
+    testRuntimeOnly 'com.h2database:h2'
+}
