--- a/product/build.gradle
+++ b/product/build.gradle
@@ -3,7 +3,7 @@ bootJar.enabled = true
 dependencies {
     implementation project(':common')
     api 'org.springframework.boot:spring-boot-starter-data-jpa'
-
+    api 'org.springframework.boot:spring-boot-starter-validation'
     api 'org.springframework.boot:spring-boot-starter-actuator'
     api 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     api 'org.springframework.cloud:spring-cloud-starter-openfeign'
