--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,10 @@ subprojects {
 		// spock
 		testImplementation 'org.spockframework:spock-core:2.4-M4-groovy-4.0'
 		testImplementation 'org.spockframework:spock-spring:2.4-M4-groovy-4.0'
+
+		//test lombok 사용
+		testCompileOnly 'org.projectlombok:lombok'
+		testAnnotationProcessor 'org.projectlombok:lombok'
 	}
 
 	dependencyManagement {
