--- a/product/src/test/resources/application-test.yml
+++ b/product/src/test/resources/application-test.yml
@@ -19,9 +19,20 @@ spring:
         dialect: org.hibernate.dialect.H2Dialect
         format_sql: true
         default_batch_fetch_size: 100
+        use_sql_comments: true
     show-sql: true
     defer-datasource-initialization: true
 
 sql:
   init:
     mode: never
+
+logging:
+  level:
+    org:
+      hibernate:
+        SQL: debug
+        orm:
+          jdbc:
+            bind: trace
+
