[Github Actions] run-test.yml 수정 - cd 명령어 사용하지 않고 ./gradlew :${{ matrix.service }}:clean :${{ matrix.service }}:test

--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -27,6 +27,7 @@ jobs:
           java-version: '17'
       - name: Test ${{ matrix.service }}
         run: |
-          cd ${{ matrix.service }}
+#           cd ${{ matrix.service }}
           chmod +x ./gradlew
-          ./gradlew clean test
+#          ./gradlew clean test
+          ./gradlew :${{ matrix.service }}:clean :${{ matrix.service }}:test
