--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -27,4 +27,5 @@ jobs:
           java-version: '17'
       - name: Run All Tests
         run: |
+          chmod +x ./gradlew
           ./gradlew clean test
