--- a/product/build.gradle
+++ b/product/build.gradle
@@ -1,5 +1,9 @@
 bootJar.enabled = true
 
+ext {
+    set('querydslVersion', "5.0.0")  // QueryDSL 버전 명시적으로 설정
+}
+
 dependencies {
     implementation project(':common')
     api 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -10,4 +14,15 @@ dependencies {
 
     runtimeOnly 'com.mysql:mysql-connector-j'
     testRuntimeOnly 'com.h2database:h2'
+
+    // queryDsl
+    implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
+    annotationProcessor "com.querydsl:querydsl-apt:${querydslVersion}:jakarta"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+}
+
+def querydslSrcDir = 'src/main/generated'
+clean {
+    delete file(querydslSrcDir)
 }
