--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -1,15 +1,5 @@
-server:
-  port: 19090
-
 spring:
   application:
-    name: server
-
-eureka:
-  client:
-    register-with-eureka: false
-    fetch-registry: false
-    service-url:
-      defaultZone: http://localhost:19090/eureka/
-  instance:
-    hostname: localhost
+    name: eureka-server
+  profiles:
+    default: dev
