--- a/auth/src/main/resources/application-dev.yml
+++ b/auth/src/main/resources/application-dev.yml
@@ -1,17 +1,17 @@
 server:
-  port: ${PRODUCT_SERVER_PORT}
+  port: 19010
 
 spring:
   application:
-    name: product-service
+    name: auth-service
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: ${PRODUCT_DB_URL}
-    username: ${PRODUCT_DB_USERNAME}
-    password: ${PRODUCT_DB_PASSWORD}
+    url: jdbc:mysql://localhost:3306/auth_db
+    username: root
+    password: password
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     show-sql: true
     properties:
       format-sql: true
@@ -22,12 +22,12 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: ${EUREKA_SERVER_URL}
+      defaultZone: http://localhost:19000/eureka/
 
 management:
   zipkin:
     tracing:
-      endpoint: ${ZIPKIN_URL}
+      endpoint: "http://localhost:9411/api/v2/spans"
   tracing:
     sampling:
       probability: 1.0
