--- a/auth/src/main/resources/application-prod.yml
+++ b/auth/src/main/resources/application-prod.yml
@@ -1,14 +1,14 @@
 server:
-  port: ${PRODUCT_SERVER_PORT}
+  port: ${AUTH_SERVER_PORT}
 
 spring:
   application:
-    name: product-service
+    name: auth-service
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: ${PRODUCT_DB_URL}
-    username: ${PRODUCT_DB_USERNAME}
-    password: ${PRODUCT_DB_PASSWORD}
+    url: ${AUTH_DB_URL}
+    username: ${AUTH_DB_USERNAME}
+    password: ${AUTH_DB_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: none
