--- a/gateway/src/main/resources/application-dev.yml
+++ b/gateway/src/main/resources/application-dev.yml
@@ -9,10 +9,10 @@ spring:
   cloud:
     gateway:
       routes:
-        #        - id: auth-service
-        #          uri: lb://auth-service
-        #          predicates:
-        #            - Path=/api/auth/**, /api/users/**
+        - id: auth-service
+          uri: lb://auth-service
+          predicates:
+            - Path=/api/auth/**, /api/users/**
         #        - id: hub-service
         #          uri: lb://hub-service
         #          predicates:
