feat/gateway-jwt - 게이트웨이에서 jwt 토큰 검증하고, 각 msa로 라우팅해줄 때, 헤더에 userId, role 추가

--- a/gateway/src/main/resources/application-prod.yml
+++ b/gateway/src/main/resources/application-prod.yml
@@ -44,8 +44,12 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://eureka-server:19000/eureka/
+      defaultZone: ${EUREKA_SERVER_URL}
     register-with-eureka: true
     fetch-registry: true
   instance:
     prefer-ip-address: true
+
+service:
+  jwt:
+    secret-key: ${SECRET_KEY}
