--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -5,4 +5,10 @@ dependencies {
     api 'org.springframework.cloud:spring-cloud-starter-gateway'
     api 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     api 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
+    // jwt
+    implementation 'io.jsonwebtoken:jjwt:0.12.6'
+    compileOnly 'io.jsonwebtoken:jjwt-api'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson'
 }
