feat/company-create - 권한체크용 AOP 적용, CompanyController.createCompany()

--- a/gateway/src/main/resources/application-dev.yml
+++ b/gateway/src/main/resources/application-dev.yml
@@ -28,7 +28,7 @@ spring:
         - id: product-service
           uri: lb://product-service
           predicates:
-            - Path=/api/products/**, /api/company/**
+            - Path=/api/products/**, /api/companies/**
       #        - id: notification-service
       #          uri: lb://notification-service
       #          predicates:
